[gd_scene load_steps=8 format=3 uid="uid://uugyvjl0gmkg"]

[ext_resource type="Script" path="res://Scripts/interface.gd" id="1_u55ln"]
[ext_resource type="FontFile" uid="uid://bpd1v724y3fd8" path="res://centurygothic_bold.ttf" id="2_7st8f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ioooh"]
bg_color = Color(1, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6r8pl"]
bg_color = Color(0, 0.564706, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c7myg"]
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7u3kv"]
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yweqe"]
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Interface" type="Control" node_paths=PackedStringArray("charges", "healthbar", "dodgebar", "score", "highscore")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u55ln")
charges = [NodePath("DodgeCharges/Charge1"), NodePath("DodgeCharges/Charge2"), NodePath("DodgeCharges/Charge3")]
healthbar = NodePath("HealthBar")
dodgebar = NodePath("DodgeBar")
score = NodePath("Panel/VBoxContainer/ScoreLabel")
highscore = NodePath("Panel/VBoxContainer/HighscoreLabel")

[node name="HealthBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -240.0
offset_top = -72.0
offset_right = 248.0
offset_bottom = -53.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
theme_override_styles/fill = SubResource("StyleBoxFlat_ioooh")
max_value = 20.0
value = 20.0
show_percentage = false

[node name="DodgeBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -160.0
offset_top = -48.0
offset_right = 160.0
offset_bottom = -39.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 1
theme_override_styles/fill = SubResource("StyleBoxFlat_6r8pl")
max_value = 5.0
show_percentage = false

[node name="DodgeCharges" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -32.0
offset_right = 128.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = -9
metadata/_edit_group_ = true

[node name="Charge1" type="Panel" parent="DodgeCharges"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_c7myg")

[node name="Charge2" type="Panel" parent="DodgeCharges"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_7u3kv")

[node name="Charge3" type="Panel" parent="DodgeCharges"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_yweqe")

[node name="Panel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0.607843)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -248.0
offset_top = -48.0
offset_right = -16.0
offset_bottom = 48.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -106.5
offset_top = -40.0
offset_right = 106.5
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="HighscoreLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7st8f")
theme_override_font_sizes/font_size = 30
text = "Highscore: xxx"
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_7st8f")
theme_override_font_sizes/font_size = 30
text = "Score: xxx"
vertical_alignment = 1
